--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-	"homepage": "https://fanboy-coder.github.io/just-one/",
   "name": "just-one",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-	"predeploy":"npm run build",
-	"deploy":"gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@mdi/js": "^7.3.67",
